manifests/scots-lab/apps/ntfy/_bootstrap.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
  name: ntfy
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    omni-kube-service-exposer.sidero.dev/label: Ntfy
    omni-kube-service-exposer.sidero.dev/port: "50088"
    omni-kube-service-exposer.sidero.dev/prefix: ntfy
  name: ntfy
  namespace: ntfy
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: ntfy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ntfy
  name: ntfy
  namespace: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
      - args:
        - serve
        image: binwiederhier/ntfy:v2.23.0
        imagePullPolicy: IfNotPresent
        name: ntfy
        ports:
        - containerPort: 80
          name: http
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 64Mi
        volumeMounts:
        - mountPath: /var/lib/ntfy
          name: ntfy-data
        - mountPath: /etc/ntfy/server.yml
          name: ntfy-config
          subPath: server.yml
      priorityClassName: homelab-data
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: ntfy-data
        persistentVolumeClaim:
          claimName: ntfy-data
      - configMap:
          name: ntfy-config
        name: ntfy-config
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baseline-isolation
  namespace: ntfy
spec:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kgateway-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-prometheus-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: uptime-kuma
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - ipBlock:
        cidr: 192.168.8.0/24
    - ipBlock:
        cidr: 10.0.0.0/8
    - ipBlock:
        cidr: fdae::/16
  podSelector: {}
  policyTypes:
  - Ingress
